2011-06-16  Karl Berry  <karl@tug.org>

	* updmap.pl (progname): eliminate fn in favor of $0
	or hardwired "updmap" as appropriate.

	* old-updmap: rename from updmap, to make it clearer this
	(sh version) is not used any more.
	* old-fontinst.bat: rename from fontinst.bat.

	* updmap.pl ($pdftexStripEnc): set to zero.
	(to_pdftex): return the input, not empty.
	(ProcessOptions): accept and ignore dvipdfmoutputdir.
	
	* updmap.pl (@psADOBE): use the same list as from sh updmap,
	including the spaces, to be sure we are getting the same behavior.
	
	Related:
	* Master/texmf/fonts/map/dvips/tetex/pdftex35.map,
	* Master/texmf/fonts/map/dvips/tetex/ps2pk35.map (phvbo8rn,phvbo8yn):
        ever since at least TL 7, these have had
	spurious "-Narrow-BoldOblique" suffixes on the correct
	NimbusSanL-BoldCondItal, left over from the Adobe
	Helvetica-Narrow-BoldOblique.
	(Yet the fonts could still be used.)
	* Master/texmf/fonts/map/{dvips,pdftex}/updmap: regenerate.

	* updmap.pl: support --setoption foo bar as well as foo=bar,
	for compatibility.
	(setOptions): new fn.
	(ProcessOptions): use "setoption=s{1,2}" => \@setoptions
	instead of "setoption=s" => \%setOption, since we have to parse
	the values manually.
	(Getopt::Long::Configure): removing bundling, disallows the
	=s{1,2} Getopt directive we specify for parsing.
	Original report from Herbert Schulz,
	mactex mail 13 Jun 2011 07:56:50.
	
	Unrelated, sorry:
	Add $0 to die commands.
	(setOption): silently accept dvipdfmDownloadBase14.
	($verbose): remove unused variable.

2011-06-15  Karl Berry  <karl@tug.org>

	* updmap.pl: reformat long lists, reduce ####, other formatting.
	(processOptions): do not mkdirhier the output directories
	if it is a dry run.

	* updmap.pl (@psADOBE): do BoldItalic (etc.) before Bold (etc.),
	other generated pdftex.map has bogus names with spaces.
	Original report from Herbert Schulz,
	mactex mail 13 Jun 2011 08:27:46.

	Unrelated, sorry:
	(Getopt::Long::Configure): set ignore_case_always.